@@ -1,8 +1,10 @@
 DIST pragha-0.7.1.1.tar.bz2 456412 RMD160 3a58321f48fabf0321719cacd7580d159167be62 SHA1 a13e3139bb6f5d42d7ebffbcb0b48246cc17bd31 SHA256 4db63593d8bdad8e875708aa59bbcdad478d7f369d1cf1cb47e1a8c8dc65e149
 DIST pragha-0.7.4.tar.bz2 446004 RMD160 282c2f84c4b4686a15738e4b635a5fceb29935c8 SHA1 78b84266001d9dc682dc5d55afe0abfc956198c4 SHA256 8052daa3f89f6e0a4ca057235bbebfdb6c8c8f68b2b2c0157026a19f98caeca8
 DIST pragha-0.8.3.tar.bz2 486214 RMD160 3a7e06d2dcd372b76a4fa752a87a6ce96112feba SHA1 5b7e378cccb4507f17858c4cf38b8a332fbfe0b6 SHA256 fce5c0cb012f5ef928198aed227274d124202073fa0c58926354ac879e8039eb
+DIST pragha-0.8.4.tar.bz2 488434 RMD160 ad860e3205b751c10044130f30af447ebdd24878 SHA1 b4d5289998db2c34647fc30c0b62c6a7e984c052 SHA256 c6bbcd413c45263e9fb23738757502f1846dfdac4c497738205c61294d5e1e8e
 EBUILD pragha-0.7.1.1.ebuild 682 RMD160 cf43f11004ff5deab7ba284f1020c6bd07cc1fc8 SHA1 243788cf197c43838a97c260b3edf7e1b6bb7c52 SHA256 c1bddd71245d144aa7769bbe7df6079dac22ba0b472f3991b41e4b25523b7e8e
 EBUILD pragha-0.7.4.ebuild 689 RMD160 e78ca570c5edbb1b392bdb06de9878ca5232eb04 SHA1 75c956f50500a6b3803c636886b3735cd3991503 SHA256 5127e18af045c72229ef0f4b6695605e0402b570c54d7cea6e47d2c5be16ebb6
 EBUILD pragha-0.8.3.ebuild 689 RMD160 e78ca570c5edbb1b392bdb06de9878ca5232eb04 SHA1 75c956f50500a6b3803c636886b3735cd3991503 SHA256 5127e18af045c72229ef0f4b6695605e0402b570c54d7cea6e47d2c5be16ebb6
-MISC ChangeLog 496 RMD160 7081eb43605309897b8eef2abf534a63b233cd27 SHA1 d9c7ce218dffe2cbb0984bf7511d56c866be5bfa SHA256 8b35b481131293423ae1ae28bce6fc2495bfc85d2c597c9783db86532e4bb909
+EBUILD pragha-0.8.4.ebuild 689 RMD160 e78ca570c5edbb1b392bdb06de9878ca5232eb04 SHA1 75c956f50500a6b3803c636886b3735cd3991503 SHA256 5127e18af045c72229ef0f4b6695605e0402b570c54d7cea6e47d2c5be16ebb6
+MISC ChangeLog 607 RMD160 e7603212092831c4e95562cd089b68c95cfc55d4 SHA1 49253266932ff17425a3f302f826438fc91e8518 SHA256 419151e1731d0375b16f312d566e58dfc0bd640023a9be24573d0c783c33a466
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
