@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pragha-0.8.4 (04 Jan 2011)
+
+  04 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +pragha-0.8.4.ebuild:
+  Bumped.
+
 *pragha-0.8.3 (28 Nov 2010)
 
   28 Nov 2010; Michał Ziąbkowski <mziab@o2.pl> +pragha-0.8.3.ebuild:
